fix: image upload way
